--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/anuraagvaidya/cbh-staff-takehome#readme",
   "dependencies": {
-    "fastify": "^4.11.0"
+    "@fastify/auth": "^4.2.0",
+    "fastify": "^4.11.0",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "jest": "^29.3.1"
   }
 }
