--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "description": "This is my submission to the CBH Staff take-home assignment.",
   "main": "index.js",
+  "config": {
+    "node-options": "--experimental-vm-modules"
+  },
   "scripts": {
-    "test": "jest",
+    "test": "ava",
     "dev": "tsc && node ./dist/index.js"
   },
   "repository": {
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "jest": "^29.3.1"
+    "ava": "^5.1.0",
+    "axios": "^1.2.2"
   }
 }
