Made app work from docker-compose, added about tests in readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 # We basically have a single Node.js application in this project
 version: "3.9"
+
 services:
-  web:
+  app:
     build: .
     ports:
       - "3000:3000"
